--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,7 +14,8 @@
         "element-ui": "^2.0.7",
         "vue": "^2.5.7",
         "vue-router": "^3.0.1",
-        "vue-template-compiler": "^2.5.7"
+        "vue-template-compiler": "^2.5.7",
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
