--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,12 +6,14 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "webpack-dev-server --config config/webpack.dev.js --open",
-        "build": "webpack --config config/webpack.prod.js"
+        "build":
+            "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "element-ui": "^2.0.7",
+        "lodash": "^4.17.4",
         "vue": "^2.5.7",
         "vue-router": "^3.0.1",
         "vue-template-compiler": "^2.5.7",
@@ -26,6 +28,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
+        "cross-env": "^5.1.1",
         "css-loader": "^0.28.7",
         "file-loader": "^1.1.5",
         "html-webpack-plugin": "^2.30.1",
