--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "webpack-dev-server --config config/webpack.dev.js --open",
-        "build":
-            "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
+        "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
     },
     "author": "",
     "license": "ISC",
