--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -2,6 +2,6 @@
 FROM node:8.9.2
 COPY . /usr/app
 WORKDIR /usr/app
-RUN cnpm install
+RUN npm install --registry=https://registry.npm.taobao.org
 EXPOSE 8080
 CMD npm run dev
