--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,8 +5,10 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "webpack-dev-server --config config/webpack.dev.js --open",
-        "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
+        "dev":
+            "webpack-dev-server --config config/webpack.dev.js --host 0.0.0.0",
+        "build":
+            "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
     },
     "author": "",
     "license": "ISC",
