--- a/QuizSystem/src/main/resources/application.properties
+++ b/QuizSystem/src/main/resources/application.properties
@@ -2,5 +2,10 @@ spring.application.name=quiz-system
 server.port=3333
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
+spring.datasource.url=jdbc:mysql://118.89.114.168:3306/online_quiz
+spring.datasource.username=root
+spring.datasource.password=2a617
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 application.qc.name=question-collection
 application.jw.name=judge-worker
