--- a/QuestionCollection/pom.xml
+++ b/QuestionCollection/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.8-dmr</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.13.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
