generate exam and save student

--- a/EmailSystem/src/main/resources/application.properties
+++ b/EmailSystem/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=email-system
 server.port=5555
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
+email.host=smtp.126.com
+email.username=greatexam@126.com
+email.password=Gl604597230
+email.smtp.auth=true
+email.from=greatexam@126.com
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
