--- a/QuizSystem/src/main/resources/application.properties
+++ b/QuizSystem/src/main/resources/application.properties
@@ -4,3 +4,15 @@ eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 application.qc.name=question-collection
 application.jw.name=judge-worker
+application.es.name=email-system
+
+spring.datasource.url=jdbc:mysql://118.89.114.168:3306/online_quiz
+spring.datasource.username=root
+spring.datasource.password=2a617
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
