--- a/ServiceRegistryService/Dockerfile
+++ b/ServiceRegistryService/Dockerfile
@@ -1,4 +1,4 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 COPY target/srs-0.0.1-SNAPSHOT.jar /usr/src/srs-0.0.1-SNAPSHOT.jar
-CMD java -cp /usr/src/srs-0.0.1-SNAPSHOT.jar org.examples.srs
+CMD java -jar /usr/src/srs-0.0.1-SNAPSHOT.jar
 EXPOSE 1111
