--- a/QuizSystem/src/main/resources/application.properties
+++ b/QuizSystem/src/main/resources/application.properties
@@ -6,7 +6,7 @@ application.qc.name=question-collection
 application.jw.name=judge-worker
 application.es.name=email-system
 
-spring.datasource.url=jdbc:mysql://118.89.114.168:3306/online_quiz
+spring.datasource.url=jdbc:mysql://118.89.114.168:3306/online_quiz?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=2a617
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
