--- a/QuizSystem/src/main/resources/application.properties
+++ b/QuizSystem/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=quiz-system
 server.port=3333
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
-application.qc.name=question-collection
+application.qc.name=judge-worker
 application.jw.name=judge-worker
 
-spring.datasource.url=jdbc:mysql://118.89.114.168:3306/online_quiz?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://114.115.137.197:3306/online_quiz?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=2a617
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
