--- a/front-end/package.json
+++ b/front-end/package.json
@@ -32,6 +32,7 @@
         "copy-webpack-plugin": "^4.3.0",
         "cross-env": "^5.1.1",
         "css-loader": "^0.28.7",
+        "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^1.1.5",
         "html-webpack-plugin": "^2.30.1",
         "json-loader": "^0.5.7",
@@ -39,6 +40,7 @@
         "less-loader": "^4.0.5",
         "postcss-loader": "^2.0.9",
         "style-loader": "^0.19.0",
+        "uglifyjs-webpack-plugin": "^1.1.4",
         "url-loader": "^0.6.2",
         "vue-loader": "^13.5.0",
         "webpack": "^3.8.1",
